# napari-spreadsheet

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
src/napari_spreadsheet/: __init__.py  _conversion.py  _linker.py  _reader.py  _types.py  _utils.py  _widget.py  napari.yaml
src/napari_spreadsheet/_tests/: test_conversion.py  test_reader.py  test_widget.py
