[metadata]
name = napari_spreadsheet
version = 0.0.3
description = A spreadsheet widget for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanjinliu/napari-spreadsheet
author = Hanjin Liu
author_email = liuhanjin-sc@g.ecc.u-tokyo.ac.jp
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/hanjinliu/napari-spreadsheet/issues
    Documentation = https://github.com/hanjinliu/napari-spreadsheet#README.md
    Source Code = https://github.com/hanjinliu/napari-spreadsheet
    User Support = https://github.com/hanjinliu/napari-spreadsheet/issues

[options]
packages = find:
install_requires =
    magicgui
    napari
    numpy
    pandas
    qtpy
    tabulous>=0.5.0
python_requires = >=3.8
include_package_data = True
package_dir =
    src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-spreadsheet = napari_spreadsheet:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
